<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/action_label"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    <Spinner
        android:id="@+id/spinner_action"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/actions" />

    <TextView
        android:id="@+id/tvlabel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/subject_label" />

    <EditText
        android:id="@+id/subjectET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvlabel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/message_label" />

    <EditText
        android:id="@+id/messageET"
        android:layout_width="377dp"
        android:layout_height="79dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/update" />


</LinearLayout>