<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5CAE9"
    tools:context=".AddUpdateActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/addContacTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/add_new_contact"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#3F51B5" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints="Employee name"
            android:fontFamily="sans-serif-black"
            android:hint="@string/firstname_label"
            android:inputType="text"
            android:paddingHorizontal="5dp" />

        <EditText
            android:id="@+id/et_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:digits="0123456789"
            android:fontFamily="sans-serif-black"
            android:hint="@string/lastname_label"
            android:importantForAutofill="no"
            android:inputType="number" />

        <EditText
            android:id="@+id/phoneET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:hint="@string/phone_label"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:hint="@string/email_label"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:hint="@string/address_label"
            android:inputType="textPostalAddress" />

        <Button
            android:id="@+id/btn_add_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#3F51B5"
            android:fontFamily="sans-serif-black"
            android:text="@string/add_new_contact" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>